snapshots/syntax/library/statements/savepicture/savepicture_with_long_path.snap
---
source: src/syntax/library/statements/savepicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SavePictureStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SavePictureKeyword
                  text: SavePicture
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Picture1
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: Image
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"C:\\Program Files\\MyApp\\Data\\Images\\snapshot.bmp\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
